--- a/TODOlist/src/app/app.component.html
+++ b/TODOlist/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h2>List of TODOs</h2>
 <ul>
   <li *ngFor = "let task of tasks">
-    <input type="checkbox">        
-    <h2>{{task.tarefa}}</h2>
+    <input  type="checkbox" > <h3>{{task.tarefa}}</h3>
     <button (click)=" editarTarefa()" >Edit</button>
     <button (click)=" deletarTarefa()">Delete </button>
   </li><br>
